--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -46,7 +46,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "prisma": "^5.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -60,7 +61,6 @@
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "prisma": "^5.8.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
