--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "NIXPACKS" 
-buildCommand = "cd apps/api && npm ci && npm run build && npx prisma generate"
+buildCommand = "cd apps/api && npm ci && npm run build"
 
 [deploy]
-startCommand = "cd apps/api && npx prisma db push && npm run start:prod"
+startCommand = "cd apps/api && npx prisma generate && npx prisma db push && npm run start:prod"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
