--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "ai": "^3.4.33",
     "clsx": "^2.1.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "react": "19.1.0",
