--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "lucide-react": "^0.526.0",
-    "next": "15.4.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^14.2.30",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
