Fix backend database: Switch to PostgreSQL
- Convert Prisma schema from SQLite to PostgreSQL
- Add proper JSON field types for PostgreSQL
- Create initial database migration
- Update Railway deployment to use proper migrations
- Add PostgreSQL setup instructions
- Database will now work properly for user registration

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "NIXPACKS"
 buildCommand = "cd apps/api && npm ci && npm run build"
 
 [deploy]
-startCommand = "cd apps/api && npx prisma generate && npx prisma db push && npm run start:prod"
+startCommand = "cd apps/api && npx prisma generate && npx prisma migrate deploy && npm run start:prod"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
